# toy-game

./: .gitmodules  CMakeLists.txt  README.md
cmake/: target_default_compile_options.cmake
src/: game.c  game.h  main.c  main_menu.c  main_menu.h
